# ram-probe-rs

./: Cargo.toml  README.md  rust-toolchain.toml
crates/ram-probe-cli/: Cargo.toml
crates/ram-probe-cli/src/: main.rs
crates/ram-probe-rs/: Cargo.toml
crates/ram-probe-rs/src/: defmt.rs  lib.rs  session.rs
crates/ram-probe-rs/src/elf/: mod.rs  types.rs
crates/ram-probe-rs/src/run/: arm.rs  defmt.rs  mod.rs
