[package]
name = "ram-probe-cli"
version = "0.2.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

autoexamples = false
autobenches = false

include = ["/src", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]

[[bin]]
name = "ram-probe"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# error handling
color-eyre = "0.6"
# logging
log.workspace = true
pretty_env_logger = "0.5"
# CLI
clap = { workspace = true, default-features = false, features = [
    "std",
    "color",
    "help",
    "usage",
    "derive",
    "env",
] }

ram-probe-rs = { path = "../ram-probe-rs" }
